--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,23 +1,23 @@
 /* color palette from <https://github.com/vuejs/theme> */
 
 :root {
-   /* General Colors */
-   --black: #000000;
-   --dark-grey: #333333;
-   --light-grey: #a3a3a3;
-   --white: #ffffff;
-   --green: #4CAF50;
-   --light-green: #78f07d;
-   --grey: #464646;
- 
+  /* General Colors */
+  --black: #000000;
+  --dark-grey: #333333;
+  --light-grey: #a3a3a3;
+  --white: #ffffff;
+  --green: #4caf50;
+  --light-green: #78f07d;
+  --grey: #464646;
+
   /* Themed Colors */
   --main-background-color: var(--dark-grey);
   --nav-background-color: var(--black);
 
-  --main-color: #95E06C;
-  --accent-color-3: #C3F73A;
-  --accent-color-1: #68B684;
-  --accent-color-2: #094D92;
+  --main-color: #95e06c;
+  --accent-color-3: #c3f73a;
+  --accent-color-1: #68b684;
+  --accent-color-2: #094d92;
 
   --highlight-background: var(--grey);
   --highlight-color: var(--light-grey);
@@ -35,13 +35,7 @@ body {
   color: var(--light-grey);
   margin: 0;
   text-align: center;
-  font-family:
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
@@ -49,11 +43,13 @@ h1 {
   font-size: var(--header-font-size);
 }
 
-h2, h3 {
+h2,
+h3 {
   color: var(--light-grey);
 }
 
-p, li {
+p,
+li {
   font-size: var(--content-font-size);
   color: var(--light-grey);
 }
@@ -61,7 +57,7 @@ p, li {
 a {
   font-size: var(--content-font-size);
   text-decoration: none;
-  color: var(--accent-color-3)
+  color: var(--accent-color-3);
 }
 
 a:hover {
