--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -39,8 +39,9 @@ body {
 }
 
 h1 {
-  color: var(--accent-color-1);
-  font-size: var(--header-font-size);
+  color: var(--light-grey);
+  font-size: calc( var(--header-font-size));
+  margin: calc(2 * var(--default-margin));
 }
 
 h2,
@@ -61,6 +62,5 @@ a {
 }
 
 a:hover {
-  font-weight: bold;
   color: var(--highlight-color);
 }
