--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,6 +25,7 @@
   /* Content Settings */
   --default-margin: 5px;
   --default-padding: 5px;
+  --default-border-radius: 10px;
   --header-font-size: 27pt;
   --content-font-size: 16pt;
   --content-max-width: 1200px;
@@ -40,7 +41,7 @@ body {
 
 h1 {
   color: var(--light-grey);
-  font-size: calc( var(--header-font-size));
+  font-size: calc(2 * var(--header-font-size));
   margin: calc(2 * var(--default-margin));
 }
 
