--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,6 +26,7 @@
   --default-margin: 5px;
   --default-padding: 5px;
   --default-border-radius: 10px;
+  --default-border: 2px solid var(--grey);
   --header-font-size: 27pt;
   --content-font-size: 16pt;
   --content-max-width: 1200px;
@@ -41,7 +42,7 @@ body {
 
 h1 {
   color: var(--light-grey);
-  font-size: calc(2 * var(--header-font-size));
+  font-size: var(--header-font-size);
   margin: calc(2 * var(--default-margin));
 }
 
