--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -30,31 +30,36 @@
   --default-padding: 5px;
   --default-border-radius: 10px;
   --default-border: 2px solid var(--grey);
-  --header-font-size: 27pt;
-  --content-font-size: 16pt;
   --content-max-width: 80vw;
   --default-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 @media (min-width: 500px) {
-  #app {
+  :root {
     --content-max-width: 90vw;
-  }
-  h1 {
-    font-size: 20pt;
+    --content-font-size: 12pt;
+    --header-font-size: 20pt;
   }
 }
 @media (min-width: 1000px) {
-  #app {
+  :root {
     --content-max-width: 80vw;
+    --content-font-size: 12pt;
+    --header-font-size: 23pt;
   }
-  h1 {
-    font-size: 23pt;
+}
+@media (min-width: 1250px) {
+  :root {
+    --content-max-width: 80vw;
+    --content-font-size: 12pt;
+    --header-font-size: 23pt;
   }
 }
 @media (min-width: 1500px) {
-  #app {
+  :root {
     --content-max-width: 70vw;
+    --content-font-size: 13pt;
+    --header-font-size: 27pt;
   }
 }
 
