--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -31,7 +31,7 @@
   --default-border-radius: 10px;
   --default-border: 2px solid var(--grey);
   --content-max-width: 80vw;
-  --default-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  --default-box-shadow: 1px 3px 5px rgba(0, 0, 100, 0.3);
 }
 
 @media (min-width: 500px) {
